2014-03-27  Niels Möller  <nisse@lysator.liu.se>

	* dsa-gen-params.c (dsa_generate_params): New file and function,
	extracted from DSA key generation.
	* dsa-keygen.c (dsa_generate_keypair): Use dsa_generate_params.

2014-03-26  Niels Möller  <nisse@lysator.liu.se>

	* der2dsa.c (dsa_params_from_der_iterator): Converted to new DSA
	interface. Allow q_size == 0, meaning any q < p is allowed.
	Additional validity checks.
	(dsa_public_key_from_der_iterator): Converted to new DSA
	interface. Also check that the public value is in the correct
	range.
	(dsa_openssl_private_key_from_der_iterator): Converted
	to new DSA interface. Additional validity checks.
	(dsa_openssl_private_key_from_der): Converted to new DSA
	interface.
	* tools/pkcs1-conv.c (convert_dsa_private_key): Update to use
	struct dsa_params, and adapt to the der decoding changes.
	(convert_public_key): Likewise.

	* examples/hogweed-benchmark.c: Update dsa benchmarking to use new
	DSA interface.

	* dsa.c (dsa_params_init, dsa_params_clear): New functions.
	(dsa_public_key_init): Use dsa_params_init.
	(dsa_public_key_clear): Use dsa_params_clear.

	* sexp2dsa.c (dsa_keypair_from_sexp_alist): Converted to new DSA
	interface. Allow q_size == 0, meaning any q < p is allowed.
	Additional validity checks.
	(dsa_sha1_keypair_from_sexp, dsa_sha256_keypair_from_sexp):
	Converted to new DSA interface.

	* dsa2sexp.c (dsa_keypair_to_sexp): Converted to new DSA
	interface.
	* tools/pkcs1-conv.c: Updated uses of dsa_keypair_to_sexp.

	* dsa.h (struct dsa_params): New struct.

	* dsa-sign.c (dsa_sign): Use struct dsa_params, with key as a
	separate mpz_t.
	* dsa-verify.c (dsa_verify): Likewise.
	* dsa-sha1-verify.c (dsa_sha1_verify_digest, dsa_sha1_verify): Use
	dsa_verify, cast the struct dsa_public_key * input to a struct
	dsa_params *
	* dsa-sha256-verify.c (dsa_sha256_verify_digest)
	(dsa_sha256_verify): Likewise.
	* dsa-sha1-sign.c (dsa_sha1_sign_digest, dsa_sha1_sign): Likewise